# Numerical-Integration-Project-cpp

./: .gitignore  CMakeLists.txt  README.md
Code/: Doxyfile
Code/include/core/: Function.hpp
Code/include/functions/: PolyX2Cos.hpp  Power.hpp  SumSquaresXY2D.hpp
apps/: demo.cpp
docs/html/: _composite_simpson_8cpp.html  _composite_simpson_8hpp.html  _composite_simpson_8hpp.js  _composite_simpson_8hpp_source.html  _composite_trapezoid_8cpp.html  _composite_trapezoid_8hpp.html  _composite_trapezoid_8hpp.js  _composite_trapezoid_8hpp_source.html  _domain2_d_8cpp.html  _domain2_d_8hpp.html  _domain2_d_8hpp.js  _domain2_d_8hpp_source.html  _exp_x_y2_d_8hpp.html  _exp_x_y2_d_8hpp.js  _exp_x_y2_d_8hpp_source.html  _formulas.dvi  _formulas.tex  _formulas_dark.dvi  _formulas_dark.tex  _function2_d_8hpp.html  _function2_d_8hpp.js  _function2_d_8hpp_source.html  _function_8hpp.html  _function_8hpp.js  _function_8hpp_source.html  _g_s_l_integrator_8cpp.html  _g_s_l_integrator_8hpp.html  _g_s_l_integrator_8hpp.js  _g_s_l_integrator_8hpp_source.html  _gauss_legendre_8cpp.html  _gauss_legendre_8hpp.html  _gauss_legendre_8hpp.js  _gauss_legendre_8hpp_source.html  _integration_result_8hpp.html  _integration_result_8hpp.js  _integration_result_8hpp_source.html  _interval_8cpp.html  _interval_8hpp.html  _interval_8hpp.js  _interval_8hpp_source.html  (+145 more)
include/core/: Domain2D.hpp  Function2D.hpp  IntegrationResult.hpp  Interval.hpp  Solver.hpp
include/functions/: ExpXY2D.hpp  InvSqrt.hpp  LogX.hpp  ProductXY2D.hpp  SinXY2D.hpp  T2Transform.hpp
include/solvers/: CompositeSimpson.hpp  GSLIntegrator.hpp  MonteCarloUniform.hpp
src/solvers/: CompositeSimpson.cpp  GSLIntegrator.cpp  GaussLegendre.cpp
(+72 files in other folders)
